# mcp-servers

./: .gitignore  CONTRIBUTING.md  README.md  setup.py
exec/: Dockerfile  README.md  build.sh  pyproject.toml  verify_envs.sh
exec/src/: exec.py
filesystem/: DIFFSPEC.md  Dockerfile  README.md  install_cli.sh  pyproject.toml  read_function_by_keyword.py  run_server.py  setup.py  test_file_moved.txt
filesystem/cli/: Cargo.toml  mcpdiff-guide.md  mcpdiff-implementation.md  mcpdiff-reference.md  mcpdiff.py  mcpdiff_history.py  mcpdiff_utils.py
filesystem/cli/src/: main.rs
filesystem/integration_tests/: CHANGELOG.md  README.md  __init__.py  conftest.py  fixes_summary.md  mock_imports.py  run_tests.py  test_file_search.py  test_filesystem_server.py  test_git_directory_tree.py  test_init.py  test_path_validation.py
filesystem/nvim/: README.md
filesystem/nvim/lua/mcpdiff/: init.lua
filesystem/nvim/plugin/: mcpdiff_config.lua
filesystem/src/: __init__.py  filesystem (copy).py  filesystem.py  mcp_edit_utils.py
filesystem/src/grammar/: README.md  __init__.py  base.py  c_cpp.py  deprecated_metadata_extractor.py  generic_brace_block.py  generic_indentation_block.py  generic_keyword_pattern.py  incomplete_code_handler.py  javascript.py  language_aware_preprocessing.py  python.py  rust.py  typescript.py
filesystem/src/grammar/regex_parser/: CHANGELOG.md  GRAMMAR_PARSER_ANALYSIS.md  README.md  REDESIGN.md  c_cpp.py  generic_brace_block.py  generic_indentation_block.py  generic_keyword_pattern.py  javascript.py  python.py  rust.py  typescript.py
filesystem/src/grammar/test_samples/: js_simple.js  python_complex.py  rust_complex.rs  rust_simple.rs  ts_simple.ts
filesystem/src/grammar/tests/: __init__.py  run_tests.py  test_brace_block_parser.py  test_cpp_edge_cases.py  test_cpp_parser.py  test_indentation_block_edge_cases.py  test_indentation_block_parser.py  test_javascript_edge_cases.py  test_javascript_parser.py  test_keyword_pattern_edge_cases.py  test_keyword_pattern_parser.py  test_parse_test_code_samples.py  test_python_parser.py  test_rust_edge_cases.py  test_rust_parser.py  test_typescript_parser.py  test_utils.py
filesystem/src/grammar/token_parser/: __init__.py  ast_utils.py  base.py  c_parser.py  c_tokenizer.py  context_tracker.py  cpp_parser.py  cpp_tokenizer.py  css_parser.py  (+26 more)
web/: .gitignore  Dockerfile  README.md  pyproject.toml
web/src/: web.py
(+238 files in other folders)
