[project]
name = "exec"
version = "0.1.0"
description = "A Managed Command Processor for executing scripts and commands"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.5.0",
    "psutil>=7.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
