[project]
name = "filesystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "filelock>=3.18.0",
    "httpx>=0.28.1",
    "logging>=0.4.9.6",
    "mcp[cli]>=1.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
