[project]
name = "web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "httpx>=0.28.1",
    "markdownify>=1.1.0",
    "mcp[cli]>=1.6.0",
    "openai>=1.70.0",
    "pydantic>=2.11.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
