[package]
name = "mcpdiff"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0" # For easy error handling
log = "0.4"
env_logger = "0.11"
fs2 = "0.4" # For file locking
sha2 = "0.10"
hex = "0.4" # For encoding hashes
chrono = { version = "0.4", features = ["serde"] } # For parsing/formatting timestamps
uuid = { version = "1.8", features = ["v4"] } # Used internally by server, but good practice here too

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = 'abort'
